# AyadFlowSync-v4

./: .ayadsync_push_log.json  .ayadsync_readme_snap  .gitignore  AyadFlowSync.spec  BUILD_GUIDE.md  README.md  README_AR.md  build.bat  conftest.py  pyproject.toml  run.py
AyadFlowSync/: __init__.py  main.py
AyadFlowSync/core/: __init__.py  app_config.py  device_profiler.py  hardware.py  logging_setup.py  migration.py
AyadFlowSync/data/: .flash_secret  excluded_dirs.json
AyadFlowSync/db/: __init__.py  database.py
AyadFlowSync/github/: __init__.py  ai.py  analyzer.py  client.py  ops.py  upload_log.py
AyadFlowSync/lang/: arabic.py  lang.py
AyadFlowSync/security/: __init__.py  hash.py  secure_store.py  security.py
AyadFlowSync/sync/: __init__.py  dir_snapshot.py  index.py  report.py
AyadFlowSync/ui/qt/: __init__.py  about_panel.py  dashboard_panel.py  drive_panel.py  main_window.py  settings_panel.py  styles.py  sync_panel.py
assets/: README.txt
tests/: __init__.py  test_app_config.py  test_database.py  test_device_profiler.py  test_dir_snapshot.py  test_github_auth.py  test_github_client.py  test_hardware_monitor.py  test_hash_worker.py  test_lang.py  test_migration.py  test_project_inspector.py  test_secure_store.py  test_sync_engine.py
