[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "AyadFlowSync"
version = "4.0.0"
description = "USB ↔ PC sync + GitHub integration — PyQt6"
authors = [
    { name = "Mounir Ayad", email = "contact.ayad.mounir@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "PyQt6>=6.6",
    "xxhash>=3.0",
    "psutil>=5.9",
    "requests>=2.31",
    "cryptography>=41.0",
    "GitPython>=3.1",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.scripts]
ayad-flowsync = "AyadFlowSync.main:main"

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["."]
include = ["AyadFlowSync*"]
